--- a/CH35/Bootstrap/Styles/style.css
+++ b/CH35/Bootstrap/Styles/style.css
@@ -1,32 +1,50 @@
-/*
-Estilos para el archivo bootstrap.html
+/*Estilos para el archivo bootstrap.html
 
 Estilos para el cuerpo y el Titular principal de la pagina
 Agregamos estilos con el selector:
 (#) - para Id
 (.)- para clases
 (elemento)nombre de la etiqueta- para elementos especificos
-([attribute]):para elementos que tienen un atributo específico, independientemente de su valor.*/
-body{
-    background-color: rgb(235, 246, 236);
+([attribute]):para elementos que tienen un atributo específico, independientemente de su valor. */
+
+body {
+    background-color:linen;
 }
+
 h1, h2{
     text-align: center;
     padding-top: 25px;
     padding-bottom: 25px;
-    }
+}
 
-#ClaseContainer, #ClaseRow, #ClaseCol {
-    color:aliceblue;
-    background-color: hotpink;
-    border: 1px solid black;
+#clasecontenendor, #claserow, #classcol {
+    color: khaki;
+    background-color: midnightblue;
     border-radius: 10px;
     margin-bottom: 15px;
-    padding-top: 5px;
+    padding-top: 15px;
     padding-bottom: 5px;
 }
-/**Agregamos estilos a la barra de navegación y a los elementos dentro de la misma*/
-#NavPrincipal{
-    background-color: hotpink;
-    
+
+/* Agregammos estilos a la barra de navegación y a los elementos de la misma*/
+
+#NavPrincipal {
+    background-color: powderblue;
 }
+
+.nav-link,
+.navbar-brand, 
+.nav-link {
+    color: olivedrab;
+}
+
+.nav-link:hover,
+.navbar-brand:hover, 
+.nav-link:hover {
+    color: brown;
+}
+
+.navbar-toggler{
+    background-color: orangered;
+}
+
