--- a/CH35/Entregable CSS Advanced/Styles/Registrate.css
+++ b/CH35/Entregable CSS Advanced/Styles/Registrate.css
@@ -1,40 +1,174 @@
-body{
-    ;
-    
+:root{
+    --font-family: 'Montserrat Alternates', sans-serif;
+    --font-fam: 'Poppins', sans-serif;
+    --font-therd: 'Quicksand', sans-serif;  
+    --font-secundary: 'Roboto', sans-serif;
 }
 
+
 .Formulario {
-    display: flex;
-    flex-wrap: wrap;
-    /*position: absolute;*/
-    top: 150px;
-    left: 20%;
-    width: 400px;
-    /*transform: translate(-50%, -50%);*/
-    background-color: white;
-    
+    background: white;
+
+    opacity: 0.7px;
+    border: 1px;
+    box-shadow: 20px 20px 60px 0px #5E5E5E26;
+    box-shadow: -20px -20px 60px 0px #5E5E5E26;
+    position: relative;
+    width: 452px;
+    height: 503px;
+    top: 73px;
+    left: 63px;
 }
 
 h2 {
-    text-align: center;
-    padding: ;
+    
+    position: relative;
+    font-family: var(--font-family);
+    width: 400px;
+    height: 57px;
+    top: 50px;
+    left: 100px;
+       
 }
 
 .username{
     text-align: center;
 }
 .registro{
-    display: flex;
-    flex-wrap: wrap;
-    padding: 140px ;
+    background-color: white;
+    opacity: 0.7px;
+    border: 1px;
+    box-shadow: 20px 20px 60px 0px #5E5E5E26;
+    box-shadow: -20px -20px 60px 0px #5E5E5E26;
+    width: 567px;
+    height: 734px;
+    top: 144px;
+    left: 153px;
+    opacity: 0.7px;
+    position: relative;
+
 }
 .imagen{
-    padding: 50px;
-    display: flex;
     flex-wrap: wrap;
-    background-color: blueviolet;
     position: absolute;
-    left: 450px;
-    top: 150px;
+    width: 587px;
+    height: 1032px;
+    left: 853px;
+    top: 0;
+    background: linear-gradient(90deg, rgba(180, 146, 253, 0.3) 0%, rgba(173, 78, 245, 0.9543) 100%);
+
+}
+
+img{
+    position: relative;
+    top: 259px;
+    left: 117px;
+}
+
+
+
+h4 {
+   
+    /*display: inline-block;*/
+    text-align: center;
+    font-size: large;
+ 
+
+}
+
+    h4::after,h4::before {
+        content: '  ';
+        position: absolute;
+        width: 140px;
+        height: 0.5px;
+        background-color: black;
+        top: 168px;
+        left: 70px;
+
+    }
+
+.btn1 {
+    width: 205px;
+    height: 70px;
+    top: 296px;
+    left: 216px;
+    border-radius: 12px;
+    border: 1px, black;
+
+}
+.btn2 {
+    position: absolute;
+    width: 205px;
+    height: 70px;
+    top: 77px;
+    left: 220px;
+    border-radius: 12px;
+    border: 1px, black;
+
+}
+
+input[type="text"]{
+    width: 452px;
+    height: 67px;
+    top: 458px;
+    left: 216px;
+    border-radius: 12px;
+    border: 1px, black;
+    
+
+
+}
+
+input[type="placeholder"]{
+    font-family: var(--font-family);
+    width: 54px;
+    height: 44px;
+    top: 375px;
+    left: 431px;
+    color: #6667B0;
+
+}
+
+input[type="password"]{
+    width: 452px;
+    height: 67px;
+    top: 579px;
+    left: 216px;
+    border-radius: 12px;
+    border: 1px, ;
+
+    
+
+}
+
+.Yatienescuenta{
+    text-align: right;
+    color: #6B43FF;
+    font-family: var(--font-family);
+    font-size: 22px;
+    font-weight: 700;
+    line-height: 27px;
+    letter-spacing: 0em;
+    top: 130px;
+    position: relative;
     
 }
+        
+input[type="button"]{
+    position: relative;
+    background: #6B43FF;
+    width: 452px;
+    height: 67px;
+    top: 100px;
+    left: 0px;
+    border-radius: 12px;
+    font-family: var(--font-secundary);
+    font-size: 30px;
+    font-weight: 700;
+    line-height: 35px;
+    letter-spacing: 0em;
+    text-align: center;
+
+
+}
+    
